Archive2/a5/8445dec200a305/output
main.cpp: In function 'int main()':
main.cpp:21:5: error: 'x' was not declared in this scope
     x = 1;
     ^
main.cpp:22:9: warning: unused variable 'a' [-Wunused-variable]
     int a[] = {x,2,3};
         ^
